--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/browser/app/main.css" />
     <link rel="stylesheet" href="/browser/components/navbar/navbar.css" />
     <link rel="stylesheet" href="/browser/components/footer/footer.css" />
-    <link rel="stylesheet" href="/browser/components/signin/signin.css" />
+    <link rel="stylesheet" href="/browser/components/filter/filter.css" />
     <link rel="stylesheet" href="/browser/utils/contenteditable/contenteditable.css" />
     <link rel="stylesheet" href="/browser/app/home/home.css" />
     
@@ -26,29 +26,17 @@
 
     <!--local JS dependencies-->
     <script src="/browser/app/main.js"></script>
-    <script src="/browser/utils/eat-click.directive.js"></script>
-    <script src="/browser/utils/auth.factory.js"></script>
     <script src="/browser/components/navbar/navbar.directive.js"></script>
     <script src="/browser/components/footer/footer.directive.js"></script>
-    <script src="/browser/components/oauth-button/oauth-button.directive.js"></script>
-    <script src="/browser/utils/contenteditable/contenteditable.directive.js"></script>
-    <script src="/browser/components/signin/signin.directive.js"></script>
+    <script src="/browser/components/filter/filter.directive.js"></script>
     <script src="/browser/app/home/home.state.js"></script>
-    <script src="/browser/app/signup/signup.state.js"></script>
-    <script src="/browser/app/signup/signup.controller.js"></script>
-    <script src="/browser/app/login/login.state.js"></script>
-    <script src="/browser/app/login/login.controller.js"></script>
-    <script src="/browser/app/user/user.factory.js"></script>
-    <script src="/browser/app/user/list/user.list.state.js"></script>
-    <script src="/browser/app/user/list/user.list.controller.js"></script>
-    <script src="/browser/app/user/item/user.item.directive.js"></script>
-    <script src="/browser/app/user/detail/user.detail.state.js"></script>
-    <script src="/browser/app/user/detail/user.detail.controller.js"></script>
-    <script src="/browser/app/story/list/story.list.state.js"></script>
-    <script src="/browser/app/story/list/story.list.controller.js"></script>
-    <script src="/browser/app/story/detail/story.detail.controller.js"></script>
-    <script src="/browser/app/story/detail/story.detail.state.js"></script>
-    <script src="/browser/app/story/story.factory.js"></script>
+    <script src="/browser/app/product/product.factory.js"></script>
+    <script src="/browser/app/product/product.states.js"></script>
+    <script src="/browser/app/product/product.controller.js"></script>
+    <script src="/browser/app/employee/employee.factory.js"></script>
+    <script src="/browser/app/employee/employee.states.js"></script>
+    <script src="/browser/app/employee/employee.controller.js"></script>
+   
 </head>
 <body ng-app="filter">
 	<navbar></navbar>
